# sherlock-holmes

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml  requirements-ocr.txt  requirements-streamlit.txt  streamlit_app.py
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  audit-reports.md  cli.md  data-artifacts.md  development.md  getting-started.md  index.md  roadmap.md  streamlit.md
docs/decisions/: 0001-pncp-first.md  0002-ocr-as-fallback.md  0003-architecture-restructure.md
docs/reference/: brasilapi.md  comparison.md  documents.md  evidence.md  investigation.md  manual-comparison.md  ocr.md  pncp.md  ports.md  reporting.md  review.md
documentation/: overview-sherlock-holmes.md
documentation/context/: pncp-api-consultas.md  tools-analysis.md
documentation/source/: exemplo_1.xlsx  (+1 more)
notebooks/: ocr-result-review.ipynb
scripts/: collect_ocr_text.py  compare_row67.py  convert_pdf_to_ocr_images.py  fetch_row67_pages.py  generate_audit_batch_report.py  generate_audit_report.py  generate_ocr_sample_manifests.py  generate_pncp_manual_manifest.py  pncp_streamlit_app.py  process_document_text.py  run_ocr_manifest.py  run_ocr_smoke.py  run_pncp_api_smoke.py
tests/: test_app_render.py  test_application_ports.py  test_audit_report.py  test_brasilapi_enrichment.py  test_comparison.py  test_domain_migration.py  test_enrich_cnpj.py  test_evidence.py  test_inbound_adapter_migration.py  test_investigation.py  test_list_contract_documents.py  test_pncp_dates.py  test_pncp_ids.py  test_search_pncp_contracts.py  test_webapp_contract_selection.py
(+193 files in other folders)
